# llm-schema-lite

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  publish.yaml
examples/: basic_usage.py
src/llm_schema_lite/: __init__.py  core.py  exceptions.py
src/llm_schema_lite/dspy_integration/: README.md  __init__.py
src/llm_schema_lite/dspy_integration/adapters/: __init__.py  structured_output_adapter.py
src/llm_schema_lite/formatters/: __init__.py  base.py  jsonish_formatter.py  typescript_formatter.py  yaml_formatter.py
src/llm_schema_lite/parsers/: __init__.py  base.py  json_parser.py  yaml_parser.py
src/llm_schema_lite/validators/: __init__.py  base.py  json_validators.py  yaml_validators.py
src/schema_lite/: __init__.py
tests/: conftest.py  fixtures.py  formatter_helpers.py  test_advanced_features.py  test_base_formatter.py  test_core.py  test_dspy_README.md  test_dspy_adapter_structure.py  test_dspy_structured_output_adapter.py  test_enums_and_dicts.py  test_formatter_edge_cases.py  test_integration.py  test_jsonish_formatter.py  test_loads.py  test_parsers.py  test_performance.py  test_required_fields.py  test_schema_lite.py  test_token_reduction.py  test_typescript_formatter.py  test_validate.py  test_validators.py  test_yaml_formatter.py  test_yaml_repair_logic.py
